fix: custom text overflow

--- a/src/components/Window/style.module.scss
+++ b/src/components/Window/style.module.scss
@@ -32,7 +32,7 @@
         }
     }
     main {
-        width: 65%;
+        
         height: max-content;
         padding: 3rem 0;
         margin: auto;
